--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         //noinspection GradleDependency
-        classpath 'com.android.tools.build:gradle:3.0.1'    }
+        classpath 'com.android.tools.build:gradle:3.0.1'
+    }
 }
 
 allprojects {
@@ -30,11 +31,7 @@ task clean(type: Delete) {
 
 ext {
 
-    libVersionCode = 2
-    libVersionName = "0.0.2"
-
     buildToolsVersion = "28.0.0"
-
     compileSdkVersion = 28
     minSdkVersion = 17
     targetSdkVersion = 26
