--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,5 @@ ext {
     website = 'https://github.com/changshuai7/RetrofitRxNet'
 
 }
+
+tasks.getByPath(":retrofitrx:javadocRelease").enabled = false
