--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -51,6 +51,9 @@ dependencies {
     //Google - Design
     implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
 
+    //Google - Gson
+    //noinspection GradleDependency
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation project(':retrofitrx')
 //    implementation 'com.shuai:retrofit-rx-net:0.0.1'
