--- a/retrofitrx/build.gradle
+++ b/retrofitrx/build.gradle
@@ -23,28 +23,28 @@ android {
             consumerProguardFiles 'proguard-rules.pro'
         }
     }
-    useLibrary 'org.apache.http.legacy'//解决23没有Http包中的一些类库。
-
 }
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     /*********** Support-Lib **********/
-    compile  "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-
+    compileOnly  "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    //noinspection GradleDependency
+    implementation 'com.google.code.gson:gson:2.8.2'
+    
     /*********** Core-Lib **********/
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compile 'io.reactivex.rxjava2:rxjava:2.2.0'
-    compile 'com.google.code.gson:gson:2.8.2'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.0.0'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxjava:2.2.0'
 
-    //compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    //compile 'me.jessyan:retrofit-url-manager:1.4.0'
+
+    //api 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    //api 'me.jessyan:retrofit-url-manager:1.4.0'
 
 }
 
