--- a/retrofitrx/build.gradle
+++ b/retrofitrx/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.novoda.bintray-release' // must be applied after your artifact generating plugin (eg. java / com.android.library)
 
 buildscript {
@@ -41,6 +42,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.0.0'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
     //api 'com.squareup.okhttp3:logging-interceptor:3.6.0'
@@ -55,4 +57,7 @@ publish {
     publishVersion = rootProject.ext.publishVersion
     desc = rootProject.ext.desc
     website = rootProject.ext.website
+}
+repositories {
+    mavenCentral()
 }
