--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,29 +48,14 @@ android {
 
 
 dependencies {
-    /*************Base-Lib*************/
-    //Google - V7
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    //Google - V4
-    implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
-    //Google - Design
-    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    //Google - Gson
-    //noinspection GradleDependency
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "com.google.code.gson:gson:$gson"
 
     implementation project(':retrofitrx')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-//    implementation 'com.shuai:retrofit-rx-net:0.0.1'
 
-
-    api 'com.squareup.okhttp3:okhttp:3.14.9'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'io.reactivex.rxjava2:rxjava:2.2.19'
+    //implementation 'com.shuai:retrofit-rx-net:0.0.1'
 
 }
 repositories {
