--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shuai.csnet.example.app">
+    package="com.shuai.retrofitrx.example.app">
 
 
     <application
-        android:name="com.shuai.retrofitrx.example.app.MyApplication"
+        android:name="com.shuai.retrofitrx.example.app._java.JavaApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/RetrofitRxNetAppTheme">
 
 
-        <!-- Android7.0-FileProvider -->
-        <provider
-
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.example.app.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-
-            <!-- 元数据 -->
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider_paths" />
-        </provider>
-
-        <activity android:name="com.shuai.retrofitrx.example.app.ui.view.MainActivity">
+        <activity android:name="._java.JavaMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
