--- a/build.gradle
+++ b/build.gradle
@@ -30,20 +30,22 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-
 ext {
 
-    buildToolsVersion = "28.0.0"
+    buildToolsVersion = "28.0.3"
     compileSdkVersion = 28
-    minSdkVersion = 17
+    minSdkVersion = 19
     targetSdkVersion = 28
-    supportLibraryVersion = "28.0.0"
 
+    appcompat = '1.2.0'
+    material = '1.2.1'
+    legacy_v4 = '1.0.0'
+    gson = '2.8.6'
 
     userOrg = 'shuai'
     groupId = 'com.shuai'
     artifactId = 'retrofit-rx-net'
-    publishVersion = '1.0.0'
+    publishVersion = '1.0.1'
     desc = 'a tools for android developer to request network'
     website = 'https://github.com/changshuai7/RetrofitRxNet'
 
