--- a/retrofitrx/build.gradle
+++ b/retrofitrx/build.gradle
@@ -17,11 +17,13 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        // 将库的混淆配置打包进aar，供调用方application混淆该库时使用
+        consumerProguardFiles 'proguard-rules-consumer.pro'
     }
 
     buildTypes {
         release {
-            consumerProguardFiles 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules-consumer.pro'
         }
     }
 }
@@ -30,17 +32,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
     
-    /*********** Core-Lib **********/
+    //noinspection GradleDependency
     api 'com.squareup.okhttp3:okhttp:3.14.9'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
 }
 
