--- a/retrofitrx/src/main/AndroidManifest.xml
+++ b/retrofitrx/src/main/AndroidManifest.xml
@@ -8,12 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+    <application android:networkSecurityConfig="@xml/network_security_config" />
 
-    </application>
 
 </manifest>
