--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    buildToolsVersion "${rootProject.buildToolsVersion}"
+    compileSdkVersion Integer.parseInt("${rootProject.compileSdkVersion}")
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion Integer.parseInt("${rootProject.minSdkVersion}")
+        targetSdkVersion Integer.parseInt("${rootProject.targetSdkVersion}")
         versionCode 1
         versionName "1.0"
 
@@ -46,12 +46,11 @@ android {
     }
 }
 
-
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.code.gson:gson:$gson"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
 
     implementation project(':retrofitrx')
 
