--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,58 @@
 # Project-wide Gradle settings.
-
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
-
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#
+#
+#
+########################################
+#
+#   编译配置版本
+#
+########################################
+buildToolsVersion=28.0.3
+compileSdkVersion=28
+minSdkVersion=17
+targetSdkVersion=28
+#
+########################################
+#
+#   依赖配置版本
+#
+########################################
+kotlinVersion=1.4.21
+appcompatVersion=1.2.0
+materialVersion=1.2.1
+legacyV4Version=1.0.0
+gsonVersion=2.8.6
+multidexVersion=1.0.3
+#
+okHttpVersion=3.14.9
+retrofit2Version=2.4.0
+retrofit2Rx2AdapterVersion=2.4.0
+retrofit2ConverterGsonVersion=2.4.0
+rxjava2Version=2.2.19
+rxjava2RxAndroidVersion=2.1.1
+#
+########################################
+#
+#   发布配置版本
+#
+########################################
+userOrg=shuai
+groupId=com.shuai
+artifactId=retrofit-rx-net
+publishVersion=1.0.3
+desc=a tools for android developer to request network
+website=https://github.com/changshuai7/RetrofitRxNet
