--- a/retrofitrx/build.gradle
+++ b/retrofitrx/build.gradle
@@ -11,12 +11,12 @@ buildscript {
     }
 }
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    buildToolsVersion "${rootProject.buildToolsVersion}"
+    compileSdkVersion Integer.parseInt("${rootProject.compileSdkVersion}")
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion Integer.parseInt("${rootProject.minSdkVersion}")
+        targetSdkVersion Integer.parseInt("${rootProject.targetSdkVersion}")
         // 将库的混淆配置打包进aar，供调用方application混淆该库时使用
         consumerProguardFiles 'proguard-rules-consumer.pro'
     }
@@ -32,28 +32,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-    
     //noinspection GradleDependency
-    api 'com.squareup.okhttp3:okhttp:3.14.9'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'io.reactivex.rxjava2:rxjava:2.2.19'
+    api "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    api "com.squareup.retrofit2:retrofit:$retrofit2Version"
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit2Rx2AdapterVersion"
+    api "com.squareup.retrofit2:converter-gson:$retrofit2ConverterGsonVersion"
+    api "io.reactivex.rxjava2:rxjava:$rxjava2Version"
+    api "io.reactivex.rxjava2:rxandroid:$rxjava2RxAndroidVersion"
 
 }
 
 publish {
-    userOrg = rootProject.ext.userOrg
-    groupId = rootProject.ext.groupId
-    artifactId = rootProject.ext.artifactId
-    publishVersion = rootProject.ext.publishVersion
-    desc = rootProject.ext.desc
-    website = rootProject.ext.website
+    userOrg = "${rootProject.ext.userOrg}"
+    groupId = "${rootProject.ext.groupId}"
+    artifactId = "${rootProject.ext.artifactId}"
+    publishVersion = "${rootProject.ext.publishVersion}"
+    desc = "${rootProject.ext.desc}"
+    website = "${rootProject.ext.website}"
 }
+
 repositories {
     mavenCentral()
 }
